[gd_scene load_steps=5 format=3 uid="uid://ce5dch1wxqctr"]

[ext_resource type="Script" uid="uid://cljrjqwmmxj0e" path="res://scenes/enemies/melee_enemy.gd" id="1_l188l"]
[ext_resource type="Texture2D" uid="uid://dxo2kbchxir1p" path="res://assets/enemies/hazmat-armed/enemy_hazmat-armed_placeholder.png" id="2_ru65g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8tegq"]
radius = 66.189125

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l188l"]
size = Vector2(200, 129.98859)

[node name="MeleeEnemy" type="CharacterBody2D"]
collision_layer = 12
collision_mask = 4
script = ExtResource("1_l188l")
sightline_range = 200.0
fire_rate = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8tegq")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0.81754863, 1)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_ru65g")

[node name="Sightline" type="RayCast2D" parent="."]
target_position = Vector2(250, 0)

[node name="PunchArea" type="Area2D" parent="."]
rotation = 0.0049224244

[node name="CollisionShape2D" type="CollisionShape2D" parent="PunchArea"]
position = Vector2(99.99879, -0.49224043)
shape = SubResource("RectangleShape2D_l188l")

[node name="AreaHighlight" type="ColorRect" parent="PunchArea"]
offset_left = -0.24631071
offset_top = -65.29044
offset_right = 15.753689
offset_bottom = 65.2141
color = Color(1, 0, 0, 0.5176471)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 12

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_8tegq")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
